Fix terminal cursor alignment

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -2962,7 +2962,7 @@ p.clip-animation {
   animation: blink-caret 1s steps(1) infinite;
   text-shadow: 0 0 6px #00ffff, 0 0 10px #00eaff;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: baseline;
   font-size: 1.1em;
   margin-left: 2px;
 }
